We don't optimize for-in properly in baseline JIT (maybe other JITs too) with an object with symbols https://bugs.webkit.org/show_bug.cgi?id=160211 <rdar://problem/27572612>

Reviewed by Geoffrey Garen.

The fast for-in iteration mode assumes all inline/out-of-line properties
can be iterated in linear order. This is not true if we have Symbols
because Symbols should not be iterated by for-in.

* runtime/Structure.cpp:
(JSC::Structure::add):
* tests/stress/symbol-should-not-break-for-in.js: Added.
(assert):
(foo):


Canonical link: https://commits.webkit.org/178421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203793 268f45cc-cd09-0410-ab3c-d52691b4dbfc